--- a/Готовые модели.ipynb
+++ b/Готовые модели.ipynb
@@ -79,16 +79,29 @@
    "outputs": [],
    "source": [
     "# Создание модели Logistic Regression\n",
-    "logistic_regression_model = LogisticRegression(?)\n",
-    "logistic_regression_model.fit(?, ?)\n",
+    "logistic_regression_model = LogisticRegression(\n",
+    "    max_iter=5000,\n",
+    "    C=0.7,\n",
+    "    solver='lbfgs',\n",
+    "    class_weight='balanced'\n",
+    ")\n",
+    "logistic_regression_model.fit(X_train, y_train)\n",
     "\n",
     "# Создание модели Decision Tree\n",
-    "decision_tree_model = DecisionTreeClassifier(?)\n",
-    "decision_tree_model.fit(?, ?)\n",
+    "decision_tree_model = DecisionTreeClassifier(\n",
+    "    max_depth=5,\n",
+    "    min_samples_leaf=20,\n",
+    "    criterion='gini'\n",
+    ")\n",
+    "decision_tree_model.fit(X_train, y_train)\n",
     "\n",
     "# Создание модели K-Nearest Neighbors\n",
-    "knn_model = KNeighborsClassifier(?)\n",
-    "knn_model.fit(?, ?)"
+    "knn_model = KNeighborsClassifier(\n",
+    "    n_neighbors=15,\n",
+    "    weights='distance',\n",
+    "    p=2\n",
+    ")\n",
+    "knn_model.fit(X_train, y_train)"
    ]
   },
   {
