final Готовые модели.ipynb

--- a/Готовые модели.ipynb
+++ b/Готовые модели.ipynb
@@ -1,4 +1,5 @@
 {
+ {
  "cells": [
   {
    "cell_type": "markdown",
@@ -30,6 +31,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "from sklearn.metrics import roc_auc_score, precision_score, recall_score, roc_curve, accuracy_score\n",
     "\n",
@@ -53,7 +55,11 @@
     "X = data.iloc[:, 1:].to_numpy()\n",
     "y = data.iloc[:, 0].to_numpy()\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)"
    ]
   },
   {
@@ -78,30 +84,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Создание модели Logistic Regression\n",
     "logistic_regression_model = LogisticRegression(\n",
-    "    max_iter=5000,\n",
-    "    C=0.7,\n",
-    "    solver='lbfgs',\n",
-    "    class_weight='balanced'\n",
+    "    C=0.01,\n",
+    "    penalty='l2',\n",
+    "    solver='liblinear',\n",
+    "    class_weight='balanced',\n",
+    "    max_iter=10000,\n",
+    "    random_state=42\n",
     ")\n",
-    "logistic_regression_model.fit(X_train, y_train)\n",
+    "logistic_regression_model.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# Создание модели Decision Tree\n",
     "decision_tree_model = DecisionTreeClassifier(\n",
-    "    max_depth=5,\n",
+    "    max_depth=8,\n",
+    "    min_samples_split=2,\n",
     "    min_samples_leaf=20,\n",
-    "    criterion='gini'\n",
+    "    criterion='gini',\n",
+    "    random_state=42\n",
     ")\n",
     "decision_tree_model.fit(X_train, y_train)\n",
     "\n",
-    "# Создание модели K-Nearest Neighbors\n",
     "knn_model = KNeighborsClassifier(\n",
-    "    n_neighbors=15,\n",
+    "    n_neighbors=13,\n",
     "    weights='distance',\n",
     "    p=2\n",
     ")\n",
-    "knn_model.fit(X_train, y_train)"
+    "knn_model.fit(X_train_scaled, y_train)"
    ]
   },
   {
@@ -111,13 +118,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_prob_logistic = logistic_regression_model.predict_proba(X_test)[:, 1]\n",
+    "y_prob_logistic = logistic_regression_model.predict_proba(X_test_scaled)[:, 1]\n",
     "y_prob_decision_tree = decision_tree_model.predict_proba(X_test)[:, 1]\n",
-    "y_prob_knn = knn_model.predict_proba(X_test)[:, 1]\n",
+    "y_prob_knn = knn_model.predict_proba(X_test_scaled)[:, 1]\n",
     "\n",
-    "y_pred_logistic = logistic_regression_model.predict(X_test)\n",
+    "y_pred_logistic = logistic_regression_model.predict(X_test_scaled)\n",
     "y_pred_decision_tree = decision_tree_model.predict(X_test)\n",
-    "y_pred_knn = knn_model.predict(X_test)\n",
+    "y_pred_knn = knn_model.predict(X_test_scaled)\n",
     "\n",
     "accuracy_logistic = accuracy_score(y_test, y_pred_logistic)\n",
     "accuracy_decision_tree = accuracy_score(y_test, y_pred_decision_tree)\n",
