--- a/Линейная модель и градиентный спуск.ipynb
+++ b/Линейная модель и градиентный спуск.ipynb
@@ -98,57 +98,59 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from sklearn.metrics import roc_auc_score, precision_score, recall_score, f1_score\n",
     "\n",
     "\n",
     "class LinearModel:\n",
     "    def __init__(self, num_features):\n",
     "        self.num_features = num_features\n",
-    "        self.weights = ?\n",
-    "        self.bias = ?\n",
+    "        self.weights = np.zeros(num_features)\n",
+    "        self.bias = 0.0\n",
     "\n",
     "    def __call__(self, X):\n",
-    "        return ?\n",
+    "        return X @ self.weights + self.bias\n",
     "\n",
     "\n",
     "class LinearRegressor(LinearModel):\n",
     "    def fit(self, X, y, learning_rate=0.01, epochs=100):\n",
     "        error_history = []\n",
+    "        N = len(y)\n",
     "        for _ in range(epochs):\n",
-    "            predictions = ?\n",
+    "            predictions = self(X)\n",
     "            error = y - predictions\n",
-    "            gradient = ?\n",
-    "            self.weights -= ?\n",
-    "            self.bias -= learning_rate * np.mean(error)\n",
+    "            gradient = (-2 / N) * (X.T @ error)\n",
+    "            self.weights -= learning_rate * gradient\n",
+    "            self.bias -= learning_rate * np.mean(-error)\n",
     "            current_error = ((y - predictions) ** 2).sum()\n",
     "            error_history.append(current_error)\n",
     "        return error_history\n",
     "\n",
     "    def predict(self, X):\n",
-    "        return ?\n",
+    "        return self(X)\n",
     "\n",
     "\n",
     "class LinearClassifier(LinearModel):\n",
     "    def fit(self, X, y, learning_rate=0.01, epochs=100):\n",
     "        error_history = []\n",
     "        for _ in range(epochs):\n",
-    "            predictions = ?\n",
-    "            sigmoid = ?\n",
+    "            predictions = self(X)\n",
+    "            sigmoid = 1 / (1 + np.exp(-predictions))\n",
     "            error = y - sigmoid\n",
-    "            gradient = ?\n",
-    "            self.weights -= ?\n",
+    "            gradient = -(X.T @ error) / len(y)\n",
+    "            self.weights -= learning_rate * gradient\n",
     "            self.bias -= learning_rate * np.mean(error)\n",
     "            current_error = -np.mean(y * np.log(sigmoid) + (1 - y) * np.log(1 - sigmoid))\n",
     "            error_history.append(current_error)\n",
     "        return error_history\n",
     "\n",
     "    def predict(self, X):\n",
-    "        predictions = ?\n",
-    "        sigmoid = ?\n",
+    "        predictions = self(X)\n",
+    "        sigmoid = 1 / (1 + np.exp(-predictions))\n",
     "        return np.round(sigmoid)\n",
     "\n",
     "    def predict_proba(self, X):\n",
-    "        predictions = ?\n",
-    "        sigmoid = ?\n",
+    "        predictions = self(X)\n",
+    "        sigmoid = 1 / (1 + np.exp(-predictions))\n",
     "        return sigmoid"
    ]
   },
@@ -200,9 +202,9 @@
     "data = pd.read_csv('Student_Performance.csv')\n",
     "print(data.head())\n",
     "\n",
-    "Y = ?\n",
-    "X = ?\n",
-    "X['Extracurricular Activities'] = X['Extracurricular Activities'].replace({'Yes': ?, 'No': ?})\n",
+    "Y = data[\"Performance Index\"]\n",
+    "X = data.drop(columns=[\"Performance Index\"])\n",
+    "X['Extracurricular Activities'] = X['Extracurricular Activities'].replace({'Yes': 1, 'No': 0})\n",
     "X = X.to_numpy()"
    ]
   },
@@ -216,16 +218,16 @@
    "outputs": [],
    "source": [
     "# Вычислите среднее по столбцам.\n",
-    "mean = ?\n",
+    "mean = X.mean(axis=0)\n",
     "\n",
     "# Вычислите стандартное отклонение по столбцам.\n",
-    "std = ?\n",
+    "std = X.std(axis=0)\n",
     "\n",
     "# Нормализуйте данные по столбцам (стандартное масштабирование).\n",
     "normalized_X = (X - mean) / std\n",
     "\n",
     "# Нормализуйте и выходные данные\n",
-    "normalized_Y = ?"
+    "normalized_Y = (Y - Y.mean()) / Y.std()"
    ]
   },
   {
@@ -237,8 +239,8 @@
    },
    "outputs": [],
    "source": [
-    "lr = LinearRegressor(num_features=?)\n",
-    "history = lr.fit(?)"
+    "lr = LinearRegressor(num_features=normalized_X.shape[1])\n",
+    "history = lr.fit(normalized_X, normalized_Y)"
    ]
   },
   {
@@ -253,14 +255,14 @@
     "epochs = range(1, len(history) + 1)\n",
     "\n",
     "# Постройте график обучения.\n",
-    "plt.plot(?, ?, 'b', label='MSE')\n",
+    "plt.plot(epochs, history, 'b', label='MSE')\n",
     "plt.title('График обучения')\n",
     "plt.xlabel('Эпохи')\n",
     "plt.ylabel('MSE')\n",
     "plt.legend()\n",
     "\n",
     "# Отобразите график.\n",
-    "plt.?()"
+    "plt.show()"
    ]
   },
   {
@@ -270,7 +272,7 @@
    "source": [
     "### Классификатор\n",
     "#### Context\n",
-    "When a bank receives a loan application, based on the applicant’s profile the bank has to make a decision regarding whether to go ahead with the loan approval or not. Two types of risks are associated with the bank’s decision.\"\n",
+    "When a bank receives a loan application, based on the applicant's profile the bank has to make a decision regarding whether to go ahead with the loan approval or not. Two types of risks are associated with the bank's decision.\"\n",
     "\n",
     "\"If the applicant is a good credit risk, i.e. is likely to repay the loan, then not approving the loan to the person results in a loss of business to the bank\n",
     "If the applicant is a bad credit risk, i.e. is not likely to repay the loan, then approving the loan to the person results in a financial loss to the bank.\"\n",
@@ -309,8 +311,8 @@
    "source": [
     "data = pd.read_csv('german.csv', sep=';')\n",
     "print(data.head())\n",
-    "Y = ?\n",
-    "X = ?"
+    "Y = data[\"Creditability\"]\n",
+    "X = data.drop(columns=[\"Creditability\"])"
    ]
   },
   {
@@ -335,13 +337,13 @@
    "outputs": [],
    "source": [
     "# Вычислите среднее по столбцам.\n",
-    "mean = ?\n",
+    "mean = X.mean(axis=0)\n",
     "\n",
     "# Вычислите стандартное отклонение по столбцам.\n",
-    "std = ?\n",
+    "std = X.std(axis=0)\n",
     "\n",
     "# Нормализуйте данные по столбцам (стандартное масштабирование).\n",
-    "normalized_X = ?"
+    "normalized_X = (X - mean) / std"
    ]
   },
   {
@@ -353,8 +355,8 @@
    },
    "outputs": [],
    "source": [
-    "lc = LinearClassifier(num_features=?)\n",
-    "history = lc.fit(?)"
+    "lc = LinearClassifier(num_features=normalized_X.shape[1])\n",
+    "history = lc.fit(normalized_X.to_numpy(), Y.to_numpy())"
    ]
   },
   {
@@ -369,7 +371,7 @@
     "epochs = range(1, len(history) + 1)\n",
     "\n",
     "# Постройте график обучения.\n",
-    "plt.plot(?, ?, 'b', label='BCE')\n",
+    "plt.plot(epochs, history, 'b', label='BCE')\n",
     "plt.title('График обучения')\n",
     "plt.xlabel('Эпохи')\n",
     "plt.ylabel('BCE')\n",
@@ -388,7 +390,9 @@
    },
    "outputs": [],
    "source": [
-    "pred = lc.predict(normalized_X)\n",
+    "pred = lc.predict(normalized_X.to_numpy())\n",
+    "pred_proba = lc.predict_proba(normalized_X.to_numpy())\n",
+    "\n",
     "print('accuracy: ', (pred == Y).sum() / len(Y))"
    ]
   },
@@ -398,6 +402,21 @@
    "metadata": {},
    "source": [
     "Вычислите для этой модели ROC-AUC, precision, recall и f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "new-cell-metrics",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print('precision:', precision_score(Y, pred))\n",
+    "print('recall:', recall_score(Y, pred))\n",
+    "print('f1:', f1_score(Y, pred))\n",
+    "print('roc_auc:', roc_auc_score(Y, pred_proba))"
    ]
   }
  ],
